New Agents.md infos for powershell